fix: ProtocolsWrapper title alignment when in custom sort

--- a/src/components/Wallet/Dashboard/Protocols/ProtocolsWrapper/ProtocolsWrapper.module.scss
+++ b/src/components/Wallet/Dashboard/Protocols/ProtocolsWrapper/ProtocolsWrapper.module.scss
@@ -11,6 +11,9 @@
     font-size: 20px;
     margin-bottom: 14px;
 
+    &SpacedLeft {
+      margin-left: 35px;
+    }
     h3 {
       font-weight: 400;
       font-size: 20px;
